--- a/lesson-2/wwwroot/index.html
+++ b/lesson-2/wwwroot/index.html
@@ -19,7 +19,7 @@
         <h3>Edit</h3>
         <form action="javascript:void(0);"   onsubmit="updateItem()">
             <input type="hidden" id="edit-id">
-            <input type="checkbox" id="edit-isComplited">
+            <input type="checkbox" id="edit-isCompleted">
             <input type="text" id="edit-name">
             <!-- <input type="text" id="edit-hour"> -->
             <input type="submit" value="Save">
