--- a/lesson-2/wwwroot/index.html
+++ b/lesson-2/wwwroot/index.html
@@ -39,10 +39,11 @@
         </tr>
         <tbody id="Tasks"></tbody>
     </table>
-
+    <a href="./User.html" id="usersButton">Users details - for admin!!</a>
     <script src="js/site.js" asp-append-version="true"></script>
     <script type="text/javascript">
         getItems();
+
     </script>
 </body>
 
