--- a/lesson-2/wwwroot/login.html
+++ b/lesson-2/wwwroot/login.html
@@ -13,6 +13,7 @@
     <input type="text" placeholder="password" id="password">
     <button onclick="newUser()">connect</button>
 
+    <button onclick="openPostman()">Go to POSTMAN</button>
     <script src="js/login.js" asp-append-version="true"></script>
 </body>
 
